--- a/admin.html
+++ b/admin.html
@@ -2984,7 +2984,7 @@
             }
 
             redirectToLogin() {
-                window.location.href = 'admin_login.html';
+                window.location.href = '/admin/login';
             }
 
             logout() {
